  - You can now customize whether org-journal-mode will hide entries (thank you, Boris Buliga!).

## 2015-06-22 V1.9.0 Bastian Bechtold
  - Journal files can now be encrypted if you set org-journal-enable-encryption (thank you, Donghyun Cho and Puneeth Chaganti!).

## 2015-07-01 V1.9.1 Bastian Bechtold
  - Encryption and prefix now work for calendar-created entries (thank you, Puneeth Chaganti!).

## 2015-09-07 V1.10.0 Bastian Bechtold
  - Add option to find-file in same window.

## 2016-04-27 V1.11.0 Bastian Bechtold
  - Add highlight to search results (thank you, aJchemist!).
  - Add option to carry over TODO items from previous entry when creating a new entry.

## 2017-01-26 V1.12.0 Bastian Bechtold
  - Add customization option for the search order (thank you, aJchemist!).
  - Add LICENSE
  - Add keybinding for searching the journal outside of the calendar (thank you, Vladimir Kazanov!)
  - Improve README tremendously (thank you, Vladimir Kazanov and Grace Gahman!)

## 2017-07-05 V1.12.1 Bastian Bechtold
  - Adds documentation for spacemacs (thank you, borgnix!)
  - Documentation improvements (thank you, Vladimir Kazanov!)
  - Allows functions as org-journal-date-prefix (thank you, Samim, Pezeshki!)

## 2017-09-28 V1.12.2 Bastian Bechtold
  - Fixes buffer modified flag (should fix many accidental journal deletions)

## 2017-11-13 V1.12.3 Bastian Bechtold
  - Autoload fixes (thank you, Troy Hinckley!)
  - Fixes for org-journal-file-format if it has a file extension or is behind a symlink.

## 2018-03-27 V1.13.0 Bastian Bechtold
  - Implements scheduling of future events

## 2018-04-02 V1.13.1 Bastian Bechtold
  - Implements org-agenda integration

## 2018-04-02 V1.13.2 Bastian Bechtold
  - Fixes deprecation warnings and requires Emacs >= 25.1

## 2018-04-02 V1.13.3 Bastian Bechtold
  - Fixes prefix for future journal entries

## 2018-04-18 V1.13.4 Bastian Bechtold
  - Fixes issue if org-journal-dir does not end in "/"