@@ -89,3 +89,6 @@
 
 ## 2018-04-18 V1.13.4 Bastian Bechtold
   - Fixes issue if org-journal-dir does not end in "/"
+
+## 2018-05-14 V1.14.0 Bastian Bechtold
+  - Adds support for org-extend-today-until
